--- a/package.json
+++ b/package.json
@@ -23,14 +23,15 @@
     "concurrently": "^6.2.0",
     "eslint": "^7.28.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-formatter-pretty": "^4.1.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "2.3.1",
-    "typescript": "^4.3.2",
-    "eslint-config-prettier": "^8.3.0"
+    "typescript": "^4.3.2"
   },
   "engines": {
     "node": ">=12.x"
