--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -19,6 +19,7 @@
     "@types/morgan": "^1.9.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongoose": "^5.12.14",
     "morgan": "^1.10.0",
     "ts-node": "^10.0.0",
     "winston": "^3.3.3"
