--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "start": "concurrently \"yarn start:client\" \"yarn start:server\"",
     "start:client": "yarn workspace @kaichou-graduation/client start",
     "start:server": "yarn workspace @kaichou-graduation/server start",
-    "lint": "eslint . --format=pretty --cache --color"
+    "lint": "eslint . --format=pretty --cache --color",
+    "test:types": "lerna run test:types",
+    "pre-commit": "yarn lint && yarn test:types",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@types/react": "^17.0.11",
@@ -30,6 +33,8 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^6.0.0",
+    "lerna": "^4.0.0",
     "prettier": "2.3.1",
     "typescript": "^4.3.2"
   },
