--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -4,17 +4,26 @@
   "main": "index.ts",
   "private": "true",
   "scripts": {
-    "dev": "ts-node-dev --transpile-only src/index.ts"
+    "dev": "ts-node-dev --transpile-only src/index.ts",
+    "test:types": "yarn tsc --noEmit --skipLibCheck"
   },
   "devDependencies": {
     "@tsconfig/node12": "^1.0.8",
-    "ts-node-dev": "^1.1.6"
+    "@types/debug": "^4.1.5",
+    "source-map-support": "^0.5.19",
+    "ts-node-dev": "^1.1.6",
+    "tslint": "^6.1.3"
   },
   "dependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
+    "@types/morgan": "^1.9.2",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "ts-node": "^10.0.0"
+    "mongoose": "^5.12.14",
+    "morgan": "^1.10.0",
+    "ts-node": "^10.0.0",
+    "winston": "^3.3.3"
   }
 }
