--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@kaichou-graduation/backend",
   "version": "0.0.1",
-  "main": "index.ts",
+  "main": "src/index.ts",
   "private": "true",
   "scripts": {
-    "dev": "ts-node-dev --transpile-only src/index.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register src/index.ts",
     "test:types": "yarn tsc --noEmit --skipLibCheck"
   },
   "devDependencies": {
@@ -12,6 +12,7 @@
     "@types/debug": "^4.1.5",
     "source-map-support": "^0.5.19",
     "ts-node-dev": "^1.1.6",
+    "tsconfig-paths": "^3.9.0",
     "tslint": "^6.1.3"
   },
   "dependencies": {
