--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -9,6 +9,7 @@
     "test:types": "yarn tsc --noEmit --skipLibCheck"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "next": "10.2.3",
     "normalize-scss": "^7.0.1",
     "react": "17.0.2",
@@ -16,5 +17,8 @@
     "react-particles-js": "^3.4.1",
     "sass": "^1.35.0",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "typescript-plugin-css-modules": "^3.4.0"
   }
 }
