temporaty fix until i find a solution

--- a/packages/frontend/.gitignore
+++ b/packages/frontend/.gitignore
@@ -33,6 +33,7 @@ yarn-error.log*
 # vercel
 .vercel
 
-#Meckis Test files
-components/*Board.tsx
+#Meckis Test files (Temporary solution)
+components/Video/VideoBoard.tsx
+components/Image/ImageBoard.tsx
 pages/test.tsx
