--- a/.gitignore
+++ b/.gitignore
@@ -112,6 +112,9 @@ dist
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
+#local file history
+.history
+
 # yarn v2
 .yarn/cache
 .yarn/unplugged
