--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -23,6 +23,7 @@
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
     "@types/morgan": "^1.9.2",
+    "axios": "^0.21.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
