--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -14,6 +14,7 @@
     "normalize-scss": "^7.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-particles-js": "^3.4.1",
     "sass": "^1.35.0",
     "uuid": "^8.3.2"
