--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -18,6 +18,7 @@
     "react-multi-carousel": "^2.6.3",
     "react-particles-js": "^3.4.1",
     "react-player": "^2.9.0",
+    "react-stack-grid": "^0.7.1",
     "sass": "^1.35.1",
     "uuid": "^8.3.2"
   },
