--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -16,10 +16,10 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-google-recaptcha-v3": "^1.9.4",
+    "react-masonry-css": "^1.0.16",
     "react-multi-carousel": "^2.6.3",
     "react-particles-js": "^3.4.1",
     "react-player": "^2.9.0",
-    "react-stack-grid": "^0.7.1",
     "sass": "^1.35.1",
     "uuid": "^8.3.2"
   },
