--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lerna": "^4.0.0",
     "prettier": "2.3.1",
     "typescript": "^4.3.2"
+    "react-stack-grid": "^0.7.1",
   },
   "engines": {
     "node": ">=12.x"
