--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-google-recaptcha-v3": "^1.9.4",
+    "react-masonry-css": "^1.0.16",
     "react-particles-js": "^3.4.1",
     "react-player": "^2.9.0",
     "sass": "^1.35.1",
