--- a/packages/backend/.env.example
+++ b/packages/backend/.env.example
@@ -1,5 +1,6 @@
 PORT=5000
 DEBUG=TRUE
 CLIENT_URL="http://localhost:3000"
-DB_URI=your-mongodb-connection-string
-CAPTCHA_SECRET_KEY=your-google-recaptcha-secretkey
+DB_URI="your-mongodb-connection-string"
+KEY="privkey.pem"
+CERT="cert.crt"
