--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -19,6 +19,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-masonry-css": "^1.0.16",
     "react-multi-carousel": "^2.6.3",
+    "react-parallax": "^3.3.0",
     "react-particles-js": "^3.4.1",
     "react-player": "^2.9.0",
     "sass": "^1.35.1",
