--- a/packages/frontend/.env.example
+++ b/packages/frontend/.env.example
@@ -1,3 +1,4 @@
-PORT=3000
-NEXT_PUBLIC_API_HOSTNAME="localhost"
-NEXT_PUBLIC_API_PORT=5000
+NODE_ENV=development
+NEXT_PUBLIC_API_URL="http://localhost:5000/public/v1"
+KEY="privkey.pem"
+CERT="cert.crt"
