Add http redirect server

--- a/packages/frontend/.env.example
+++ b/packages/frontend/.env.example
@@ -2,3 +2,6 @@ NODE_ENV=development
 NEXT_PUBLIC_API_URL="http://localhost:5000/public/v1"
 KEY="privkey.pem"
 CERT="cert.crt"
+HTTP_PORT=3000
+HTTPS_PORT=3001
+REDIRECT_HOST="https://localhost:3001"
