--- a/packages/backend/.env.example
+++ b/packages/backend/.env.example
@@ -1,7 +1,7 @@
 NODE_ENV=development
 PORT=5000
 DEBUG=TRUE
-CLIENT_URL="http://localhost:3000"
+CLIENT_URL="https://localhost:3001"
 DB_URI="your-mongodb-connection-string"
 KEY="privkey.pem"
 CERT="cert.crt"
